TSVPORTAL-729 | Menu Rule Migration update

--- a/app/views/menu-rules.html
+++ b/app/views/menu-rules.html
@@ -167,7 +167,7 @@
         <tr ng-show="menuRule.isExpanded">
           <td colspan="20">
             <div ng-repeat="cabinClass in menuRule.cabins" class="panel panel-default">
-              <div class="panel-heading">{{ cabinClass.companyCabinClassId }}</div>
+              <div class="panel-heading">{{ cabinClass.companyCabinClass }}</div>
               <div class="panel-body">
                 <table class="table table-bordered table-hover">
                   <tbody>
