--- a/app/views/menu-rule-create.html
+++ b/app/views/menu-rule-create.html
@@ -2,6 +2,18 @@
 .close {
     display:inline;
 }
+.alert-danger {
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    color: #cd5c5c;
+    text-align: center;
+}
+.alert-warning {
+    background-color: #BDE19B;
+    border-color: #94cb66;
+    color: #283a1a;
+    text-align: center;
+}
 </style>
 <div class="module-container">
   <div class="edit-controls">
@@ -9,12 +21,15 @@
       <div class="col-xs-6">
         <h2 class="view-name">{{viewName}}</h2>
       </div>
-
       <div class="col-xs-6 text-right">
         <a class="btn btn-default" ng-href="#/menu-rules" class="btn" ng-show="readOnly">Back</a>
       </div>
     </div>
   </div>
+
+  <div class="panel panel-default panel-heading alert-danger"   ng-show="readOnly"> {{ formData.menuRuleCode }}</div>
+  <div class="panel panel-default panel-heading alert-warning"  ng-show="isEdit">{{ formData.menuRuleCode }}</div>
+  
   <error-dialog form-object="menuRuleDataForm" error-response="errorResponse" display="displayError"></error-dialog>
   <form name="menuRuleDataForm" class="form edit-form create-item-form">
     <div class="panel panel-default">
@@ -29,7 +44,7 @@
                       name="scheduleNumber"
                       ng-model="formData.scheduleNumber"
                       ng-options="schedule.scheduleNumber as schedule.scheduleNumber for schedule in schedules | orderBy: 'scheduleNumber'"
-                      ng-disabled="isDisabled()"
+                      ng-disabled="isEffective(formData)"
                       required="true"
                       required
                       id="schedule-number">
@@ -45,7 +60,7 @@
                       name="departureStation"
                       ng-model="formData.departureStationId"
                       ng-options="station.id as (station.code + ' (' + station.name +')') for station in stationList"
-                      ng-disabled="isDisabled()"
+                      ng-disabled="isEffective(formData)"
                       required="true"
                       required
                       id="departure-station">
@@ -61,7 +76,7 @@
                       name="arrivalStation"
                       ng-model="formData.arrivalStationId"
                       ng-options="station.id as (station.code + ' (' + station.name +')') for station in stationList"
-                      ng-disabled="isDisabled()"
+                      ng-disabled="isEffective(formData)"
                       required
                       required="true"
                       id="arrival-station">
@@ -76,7 +91,7 @@
           <div class="col-xs-12 col-sm-4">
             <div class="form-group">
               <label for="days-of-operation">Days of Operation *</label>
-              <ui-select id="days-of-operation" multiple ng-model="formData.days"  ng-disabled="isDisabled()" name="daysOfOperation" theme="bootstrap" required required="true">
+              <ui-select id="days-of-operation" multiple ng-model="formData.days"  ng-disabled="isEffective(formData)" name="daysOfOperation" theme="bootstrap" required required="true">
                 <ui-select-match placeholder="Select Days of Operations">{{ $item.name }}</ui-select-match>
                 <ui-select-choices repeat="number in daysOfOperation | filter: $select.search">
                   {{ number.name }}
@@ -89,7 +104,7 @@
             <div class="form-group">
               <label for="departure-time">Depart. Time (HH:mm) *</label>
               <input ng-model="formData.departureTime"
-                     ng-disabled="isDisabled()"
+                     ng-disabled="isEffective(formData)"
                      name="departureTime"
                      maxlength="5"
                      oninput="this.value=this.value.replace(/[^0-9:]/g,'');"
@@ -112,7 +127,7 @@
                      placeholder="23:34"
                      maxlength="5"
                      oninput="this.value=this.value.replace(/[^0-9:]/g,'');"
-                     ng-disabled="isDisabled()"
+                     ng-disabled="isEffective(formData)"
                      id="arrival-time"
                      required
                      required="true"
@@ -130,7 +145,7 @@
                       name="aircraftType"
                       ng-model="formData.companyCarrierTypeId"
                       ng-options="carrierType.companyCarrierTypeId as carrierType.carrierType for carrierType in carrierTypes"
-                      ng-disabled="isDisabled()"
+                      ng-disabled="isEffective(formData)"
                       id="aircraft-type">
                 <option selected="selected" value>Carrier Type</option>
               </select>
@@ -152,14 +167,9 @@
 						       name="startDate"
 						       ng-model="formData.startDate"
 						       label="Effective From"
-						       min-date="minDate"
 						       disable="true"
 						       required="true">
 			</date-picker-field>
-			<!-- <fieldset ng-disabled="readOnly || isCurrentEffectiveDate(formData)">
-                <date-picker-field form="form" label="Effective From" name="EffectiveFrom" ng-model="formData.startDate"
-                min-date="'+1d'" required="true"></date-picker-field>
-              </fieldset> -->
           </div>
           <div class="col-xs-12 col-sm-3" ui-on-Drop="">
             <date-picker-field
@@ -168,7 +178,7 @@
 						        ng-model="formData.endDate"
 						        label="Effective To"
 						        min-date="minDate"
-						        disable="readOnly"
+						        disable="readOnly || !isEffective(formData)"
 						        end-current-effective="true"
 						        required="true">
       		</date-picker-field>
@@ -177,7 +187,6 @@
 						        name="endDate"
 						        ng-model="formData.endDate"
 						        label="Effective To"
-						        disable="readOnly"
 						        required="true">
       		</date-picker-field>
           </div>
@@ -193,7 +202,7 @@
       <div class="panel-body">
         <h3>
           Assigned Menus
-          <button type="button" class="btn btn-primary btn-xs pull-right" ng-click="addMenu(cabinClass.id)" ng-hide="readOnly">
+          <button type="button" class="btn btn-primary btn-xs pull-right" ng-click="addMenu(cabinClass.id)" ng-hide="readOnly" ng-disabled="isEffective(formData)">
             <i class="fa fa-plus"></i> Add Menu
           </button>
         </h3>
@@ -214,7 +223,7 @@
                     ng-model="menu.menu"
                     theme="bootstrap"
                     placeholder="Select a menu..."
-                    ng-disabled="readOnly"
+                    ng-disabled="isEffective(formData)"
                     required="true">
                     <ui-select-match allow-clear="!readOnly" placeholder="Select a menu...">{{$select.selected.menuCode}}</ui-select-match>
                     <ui-select-choices repeat="menu in menuMasters | filter: $select.search | orderBy:'menuCode'">
@@ -233,10 +242,10 @@
                          name="menuItemQuantity"
                          ng-model="menu.menuQty"
                          placeholder="{{$index}}"
-                         ng-disabled="readOnly" />
+                         ng-disabled="isEffective(formData)" />
                 </td>
                 <td ng-hide="readOnly">
-                  <button class="btn btn-danger btn-xs" ng-click="removeMenu(cabinClass.id, menu)">
+                  <button class="btn btn-danger btn-xs" ng-click="removeMenu(cabinClass.id, menu)" ng-disabled="isEffective(formData)">
                     <i class="fa fa-trash"></i>
                   </button>
                 </td>
@@ -250,7 +259,7 @@
 
         <h3>
           Assigned Items
-          <button type="button" class="btn btn-primary btn-xs pull-right" ng-click="addItem(cabinClass.id)" ng-hide="readOnly">
+          <button type="button" class="btn btn-primary btn-xs pull-right" ng-click="addItem(cabinClass.id)" ng-hide="readOnly" ng-disabled="isEffective(formData)">
             <i class="fa fa-plus"></i> Add Item
           </button>
         </h3>
@@ -265,7 +274,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="item in formData.selectedItems[cabinClass.id]">readOnly {{ readOnly }}
+            <tr ng-repeat="item in formData.selectedItems[cabinClass.id]">
               <td ng-hide="readOnly">
                 <ui-select
                   name="selectedCategories[item.menuIndex]"
@@ -273,6 +282,7 @@
                   on-select="filterItemListByCategory(item)"
                   on-remove="filterItemListByCategory(item)"
                   theme="bootstrap"
+                  ng-disabled="isEffective(formData)"
                   placeholder="Select a category to filter the items list...">
                   <ui-select-match
                     allow-clear="!readOnly"
@@ -290,7 +300,7 @@
                   ng-model="item.item"
                   theme="bootstrap"
                   placeholder="Select or search an item from the list..."
-                  ng-disabled="readOnly">
+                  ng-disabled="isEffective(formData)">
                   <ui-select-match placeholder="Select or search an item from the list...">{{$select.selected.itemName}}</ui-select-match>
                   <ui-select-choices repeat="item in item.items | filter: $select.search | orderBy:'itemName'">
                     <div ng-bind-html="item.itemName | highlight: $select.search"></div>
@@ -308,10 +318,10 @@
                        name="menuItemQuantity"
                        ng-model="item.itemQty"
                        placeholder="{{$index}}"
-                       ng-disabled="readOnly"/>
+                       ng-disabled="isEffective(formData)"/>
               </td>
               <td ng-hide="readOnly">
-                <button class="btn btn-danger btn-xs" ng-click="removeItem(cabinClass.id, item)">
+                <button class="btn btn-danger btn-xs" ng-click="removeItem(cabinClass.id, item)" ng-disabled="isEffective(formData)">
                   <i class="fa fa-trash"></i>
                 </button>
               </td>
