TSVPORTAL-7591 - Fixed employee search bugs on create page

--- a/app/views/employee-message.html
+++ b/app/views/employee-message.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-xs-6 col-sm-3">
             <div class="form-group">
-           
+
               <date-picker-field  ng-if="!shouldDisable(true)"
                 name="startDate"
                 class="form-group"
@@ -65,7 +65,7 @@
           </div>
           <div class="col-xs-6 col-sm-3">
             <div class="form-group">
-              <date-picker-field 
+              <date-picker-field
                 name="endDate"
                 class="form-group"
                 form="employeeMessageForm"
@@ -75,7 +75,7 @@
                 custom-effective="true"
                 required="true">
               </date-picker-field>
-              
+
             </div>
           </div>
         </div>
@@ -126,10 +126,10 @@
                       <ui-select multiple ng-model="newRecords.employees" theme="bootstrap">
                         <ui-select-match placeholder="Select an Employee...">{{ $item.employeeIdentifier }}
                         </ui-select-match>
-                        <ui-select-choices 
+                        <ui-select-choices
                           refresh="searchEmployees($select)"
                           refresh-delay="300"
-                          repeat="employee in filteredEmployees | filter: $select.search | limitTo:100">
+                          repeat="employee in employeesList | filter: $select.search | limitTo:100">
                           {{ employee.employeeIdentifier }} - {{ employee.lastName}}, {{ employee.firstName }}
                         </ui-select-choices>
                       </ui-select>
