TSVPORTAL-729 | Search Page Fix

--- a/app/views/menu-rules.html
+++ b/app/views/menu-rules.html
@@ -2,6 +2,7 @@
 .close {
     display:inline;
 }
+.ui-select-multiple input.ui-select-search { width:100% !important; cursor: pointer; }
 </style>
 <!-- This is the menu-rules view. -->
 <div class="module-container">
