--- a/app/views/company-create.html
+++ b/app/views/company-create.html
@@ -244,12 +244,12 @@
        <fieldset ng-if="showLanguageFields" ng-disabled="viewOnly">
         <h3 id="company-languages">Company Languages</h3>
           <div class="col-xs-12 col-sm-6">
-            <label>Default Language*</label>
+            <label>Back Office Default Language*</label>
                                 <select ng-model="formData.defaultLanguage" class="form-control" id="defaultLanguage" ng-change="onChangeDefaultLanguage()" required="true">
                                     <option value="{{ lng.id }}" ng-repeat="lng in defaultLanguages | orderBy:'languageName'">{{ lng.languageName }}</option>
                                 </select>
             
-            <label>Additional Languages</label>
+            <label>Back Office Additional Language</label>
             <ui-select multiple ng-model="formData.languages" theme="bootstrap" on-remove="onChangeAdditionalLanguage()" on-select="onChangeAdditionalLanguage()" >
               <ui-select-match placeholder="Languages">{{ $item.languageName }}
               </ui-select-match>
@@ -266,7 +266,7 @@
                                     <option value="{{ eposlng.id }}" ng-repeat="eposlng in defaultEposLanguages | orderBy:'languageName'">{{ eposlng.languageName }}</option>
                                 </select>
  
-              <label>ePOS Additional Languages</label>
+              <label>ePOS Additional Language</label>
               <ui-select multiple ng-model="formData.eposLanguages" theme="bootstrap" on-remove="onChangeEposAdditionalLanguage()" on-select="onChangeEposAdditionalLanguage()" >
                 <ui-select-match placeholder="Languages">{{ $item.languageName }}
                 </ui-select-match>
