--- a/app/views/company-create.html
+++ b/app/views/company-create.html
@@ -244,12 +244,23 @@
        <fieldset ng-if="showLanguageFields" ng-disabled="viewOnly">
         <h3 id="company-languages">Company Languages</h3>
           <div class="col-xs-12 col-sm-6">
-            <label>Back Office Default Language*</label>
-                                <select ng-model="formData.defaultLanguage" class="form-control" id="defaultLanguage" ng-change="onChangeDefaultLanguage()" required="true">
+            <div ng-show="isCompanyRetail" ng-if="isCompanyRetail">
+                <label>Back Office Default Language*</label>
+                                <select ng-model="formData.defaultLanguage" class="form-control" id="backOfficeDefaultLanguage" 
+                                name="backOfficeDefaultLanguage"  ng-change="onChangeDefaultLanguage()" required="true">
                                     <option value="{{ lng.id }}" ng-repeat="lng in defaultLanguages | orderBy:'languageName'">{{ lng.languageName }}</option>
                                 </select>
+            </div>
+            <div ng-show="!isCompanyRetail" ng-if="!isCompanyRetail">
+                <label>Default Language*</label>
+                                <select ng-model="formData.defaultLanguage" class="form-control" id="defaultLanguage" 
+                                name="defaultLanguage"  ng-change="onChangeDefaultLanguage()" required="true">
+                                    <option value="{{ lng.id }}" ng-repeat="lng in defaultLanguages | orderBy:'languageName'">{{ lng.languageName }}</option>
+                                </select>
+            </div>
             
-            <label>Back Office Additional Language</label>
+            <label ng-show="isCompanyRetail">Back Office Additional Language</label>
+            <label ng-show="!isCompanyRetail">Additional Language</label>
             <ui-select multiple ng-model="formData.languages" theme="bootstrap" on-remove="onChangeAdditionalLanguage()" on-select="onChangeAdditionalLanguage()" >
               <ui-select-match placeholder="Languages">{{ $item.languageName }}
               </ui-select-match>
@@ -262,7 +273,8 @@
 
           <div class="col-xs-12 col-sm-6" ng-show="isCompanyRetail" ng-if="isCompanyRetail">
              <label>ePOS Default Language*</label>
-                                <select ng-model="formData.defaultEposLanguage" class="form-control" id="defaultEposLanguage" ng-change="onChangeEposDefaultLanguage()" required="true">
+                                <select ng-model="formData.defaultEposLanguage" class="form-control" id="defaultEposLanguage" 
+                                id="eposDefaultLanguage" name="eposDefaultLanguage" ng-change="onChangeEposDefaultLanguage()" required="true">
                                     <option value="{{ eposlng.id }}" ng-repeat="eposlng in defaultEposLanguages | orderBy:'languageName'">{{ eposlng.languageName }}</option>
                                 </select>
  
