--- a/app/views/survey-questions-list.html
+++ b/app/views/survey-questions-list.html
@@ -64,8 +64,14 @@
         <td>{{ surveyQuestion.startDate }}</td>
         <td>{{ surveyQuestion.endDate }}</td>
         <td>
-          <button class="btn btn-primary btn-xs" ng-click="redirectToSurveyQuestion(surveyQuestion.id, 'edit')" tabindex="0">
+          <a class="btn btn-info btn-xs" ng-href="#/survey-questions/view/{{surveyQuestion.id}}">
+            <i class="fa fa-file"></i>
+          </a>
+          <a class="btn btn-primary btn-xs" ng-href="#/survey-questions/edit/{{surveyQuestion.id}}" ng-hide="canEdit(surveyQuestion.endDate)">
             <i class="fa fa-pencil"></i>
+          </a>
+          <button class="btn btn-danger btn-xs" ng-click="deleteRecordDialog(surveyQuestion.id)" ng-hide="isDateActive(surveyQuestion.startDate) || isDateActive(surveyQuestion.endDate)">
+            <i class="fa fa-trash"></i>
           </button>
         </td>
       </tr>
@@ -75,8 +81,8 @@
   <alert ng-show="!loadingBarVisible && surveyQuestions.length == 0 && isSearch" type="info">
     <span class="fa fa-flag"></span> Your search returned no results.
   </alert>
-  <alert ng-show="!loadingBarVisible && surveyQuestions.length == 0 && !isSearch" type="info">
-    <span class="fa fa-flag"></span> No results found.
+  <alert ng-show="!isSearch" type="info">
+    <span class="fa fa-flag"></span> Click search to show the results.
   </alert>
   <p ng-if="surveyQuestions.length > 0" class="record-count small text-center">Showing {{surveyQuestions.length}} records</p>
   <p class="loading-more alert alert-info text-center"><i class="fa fa-spin fa-circle-o-notch"></i> Loading more...</p>
