--- a/app/views/survey-questions-list.html
+++ b/app/views/survey-questions-list.html
@@ -5,11 +5,10 @@
     </div>
 
     <div class="col-xs-8 text-right">
-      <a href="#/survey-questions/create" class="btn btn-primary"><span class="hidden-xs">Create Survey Choice</span></a>
-      <a href="#/survey-choices/create" class="btn btn-primary"><span class="hidden-xs">Create Survey Question</span></a>
-      <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse" aria-expanded="false"
-              aria-controls="search-collapse">
-        <span class="fa fa-filter" aria-hidden="true"></span>
+      <a href="#/survey-questions/create" class="btn btn-primary"><span class="hidden-xs">+ Create Survey Choice</span></a>
+      <a href="#/survey-choices/create" class="btn btn-primary"><span class="hidden-xs">+ Create Survey Question</span></a>
+      <button class="btn btn-default" ng-click="toggleSearchPanel()">
+        <span class="fa fa-filter"></span>
         <span class="hidden-sm hidden-xs">Filter</span>
       </button>
     </div>
