--- a/app/views/survey-questions-create.html
+++ b/app/views/survey-questions-create.html
@@ -1,1 +1,186 @@
-<p>This is the survey-questions-create view.</p>
+<div class="module-container">
+  <div class="edit-controls">
+    <div class="row">
+      <div class="col-xs-6">
+        <h2 class="view-name">{{viewName}}</h2>
+      </div>
+
+      <div class="col-xs-6 text-right">
+        <a class="btn btn-default" ng-href="#/survey/questions" class="btn" ng-show="readOnly">Back</a>
+      </div>
+    </div>
+  </div>
+  <error-dialog form-object="surveyQuestionDataForm" error-response="errorResponse" display="displayError"></error-dialog>
+  <!-- Started Modify-->
+  <form name="surveyQuestionDataForm">
+    <div class="panel panel-default">
+      <div class="panel-heading">Survey Question</div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-xs-12 col-sm-3">
+            <div class="form-group">
+              <label for="question-name">Question Name *</label>
+              <input ng-model="formData.questionName" type="text" ng-disabled="isDisabled()"
+                     class="form-control" id="question-name" name="questionName"
+                     required custom-validity custom-pattern="alphanumeric"  maxlength="25" placeholder="Question Name">
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-3">
+            <div class="form-group">
+              <label for="choice-type">Choice Type *</label>
+              <select class="form-control"
+                      name="choiceType"
+                      ng-model="formData.questionType"
+                      ng-options="surveyChoiceType.id as (surveyChoiceType.name) for surveyChoiceType in surveyChoiceTypes"
+                      ng-disabled="isDisabled()"
+                      required="true"
+                      required
+                      id="choice-type">
+                <option selected="selected" value>Choice Type</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-3">
+            <div class="form-group">
+              <date-picker-field
+                ng-if="isLoadingCompleted"
+                form="surveyQuestionDataForm"
+                name="EffectiveStartDate"
+                label="Effective Start Date"
+                disable="isDisabled()"
+                required="true"
+                end-current-effective="!viewEditItem"
+                ng-model="formData.startDate">
+              </date-picker-field>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-3">
+            <div class="form-group">
+              <date-picker-field
+                ng-if="isLoadingCompleted"
+                form="surveyQuestionDataForm"
+                name="EffectiveEndDate"
+                label="Effective End Date"
+                disable="readOnly || shouldDisableEndDate"
+                ng-model="employee.endDate"
+                end-current-effective="!viewEditItem"
+                custom-effective="true"
+                min-date="minDate"
+                custom-date="formData.endDate"
+                required="true">
+              </date-picker-field>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-3">
+            <div class="form-group">
+              <label class="control-label">Question Text</label>
+              <textarea class="form-control" ng-model="formData.questionText" name="description" ng-pattern="regexp.sentence" required ng-disabled="isDisabled()" ></textarea>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-3">
+            <div class="form-group">
+              <label for="choice-type">Locale</label>
+              <select class="form-control"
+                      name="locale"
+                      ng-model="formData.questionType"
+                      ng-options="locale.id as (locale.code) for locale in locales"
+                      ng-disabled="isDisabled()"
+                      required="true"
+                      required
+                      id="locale">
+                <option selected="selected" value>Locale</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-3">
+            <label>Options</label>
+            <div class="form-group">
+              <input type="checkbox"
+                     id="first-trip"
+                     ng-model="formData.emptyDefault"
+                     ng-disabled="isDisabled()">
+              <label for="first-trip">Empty default</label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Choices
+        <button type="button" class="btn btn-primary btn-xs pull-right" ng-click="addChoice()" ng-hide="readOnly">
+          <i class="fa fa-plus"></i> Add Choice
+        </button>
+      </div>
+      <div class="panel-body">
+        <div class="table">
+          <table class="table table-bordered table-hover">
+            <thead>
+            <tr>
+              <th class="col-xs-1" ng-show="isSurveyQuestionEditable()" style="text-align:center;">Reorder</th>
+              <th class="col-xs-5">Choice</th>
+              <th ng-hide="isSurveyQuestionReadOnly()" class="col-xs-1">Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr
+              ng-init="item.sortOrderIndex=$index"
+              ng-repeat="item in surveyChoices | orderBy:'sortOrder' track by $index">
+              <td ng-if="isMenuEditable()"
+                  on-drop-success="dropSuccess($event, $index, menuItemList)"
+                  ui-draggable="isSurveyQuestionEditable()" drag="item"
+                  drag-channel="A" drop-channel="A"
+                  ui-on-Drop="onDrop($event, $data, $index)"
+                  style="text-align:center; cursor: pointer;">
+                <span class="glyphicon glyphicon-move" aria-hidden="true" ></span>
+              </td>
+              <td ng-if="isSurveyQuestionEditable()">
+                <ui-select
+                  name="selectedCategories[item.menuIndex]"
+                  ng-model="selectedCategories[item.menuIndex]"
+                  on-select="filterItemListByCategory(item.menuIndex)"
+                  theme="bootstrap"
+                  placeholder="Select a category to filter the items list...">
+                  <ui-select-match
+                    allow-clear="true"
+                    placeholder="Select a category to filter the items list...">{{$select.selected.name}}
+                  </ui-select-match>
+                  <ui-select-choices repeat="category in categories | filter: $select.search | orderBy:'name'">
+                    <div ng-bind-html="category.name | highlight: $select.search"></div>
+                  </ui-select-choices>
+                </ui-select>
+              </td>
+              <td ng-show="isSurveyQuestionEditable()">
+                <button class="btn btn-danger btn-xs" ng-click="removeItem(item.menuIndex)">
+                  <i class="fa fa-trash"></i>
+                </button>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="panel-footer text-right">
+        <a href="#/survey/questions" class="btn btn-default" ng-hide="readOnly">Cancel</a>
+        <button class="btn btn-primary" ng-click="formSave()" ng-hide="readOnly">
+          <span class="fa fa-check-square-o" aria-hidden="true"></span> <span
+          class="hidden-xs">Save</span>
+        </button>
+      </div>
+    </div>
+
+  </form>
+
+</div>
+<!-- /Container -->
+
+<form-success-modal></form-success-modal>
+
+<form-update-modal></form-update-modal>
+
+<leave-view-modal></leave-view-modal>
+
+<dynamic-left-nav title="Survey Management"></dynamic-left-nav>
