--- a/app/views/survey-catalog.html
+++ b/app/views/survey-catalog.html
@@ -25,7 +25,7 @@
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
                 <label for="surveyCatalogName">Survey Catalog Name</label>
-                <input ng-model="search.surveyCatalogName" type="text" class="form-control" id="surveyCatalogName" placeholder="Survey Catalog Name">
+                <input ng-model="search.catalogName" type="text" class="form-control" id="surveyCatalogName" placeholder="Survey Catalog Name">
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-8">
@@ -60,7 +60,7 @@
         </thead>
         <tbody>
         <tr class="ng-scope" ng-repeat="surveyCatalog in surveyCatalogs">
-          <td>{{ surveyCatalog.surveyCatalogName }}</td>
+          <td>{{ surveyCatalog.catalogName }}</td>
           <td>{{ surveyCatalog.startDate}}</td>
           <td>{{ surveyCatalog.endDate}}</td>
           <td>
@@ -71,7 +71,7 @@
               <i class="fa fa-pencil"></i>
             </button>
             <button class="btn btn-danger btn-xs"
-                    ng-click="deleteRecordDialog(surveyCatalogs[$index], ['surveyCatalogName', 'startDate', 'endDate'])"
+                    ng-click="deleteRecordDialog(surveyCatalogs[$index], ['catalogName', 'startDate', 'endDate'])"
                     tabindex="0"
                     ng-show="showDeleteButton(surveyCatalog.startDate)">
               <i class="fa fa-trash"></i>
