--- a/app/views/directives/image-upload.html
+++ b/app/views/directives/image-upload.html
@@ -27,7 +27,7 @@
     <i  ng-show="formData.companyTypeId === '1' && imageName+'.'+fileFormat !== rejFiles[0].name">Invalid image name, accepted name {{imageName}}.{{fileFormat}}, </i>
     <i ng-show="rejFiles[0].size > 10000">max resolution: {{imageSize}} pixels.</i>
     <i ng-show="rejFiles[0].size < 10001">
-      '{{rejFiles[0].name}}' is invalid, or'{{rejFiles[0].type}}' is not an accepted file type.
+      '{{rejFiles[0].name}}' is invalid, or'{{rejFiles[0].type}}' is not an accepted file type, accepted image type: {{fileFormat}}.
     </i>
   </p>
 
