--- a/app/views/survey-catalog.html
+++ b/app/views/survey-catalog.html
@@ -67,7 +67,7 @@
             <button class="btn btn-info btn-xs" ng-click="redirectToSurveyCatalog(surveyCatalog.id, 'view')" tabindex="0">
               <i class="fa fa-file"></i>
             </button>
-            <button class="btn btn-primary btn-xs" ng-click="redirectToSurveyCatalog(surveyCatalog.id, 'edit')" ng-show="isSurveyCatalogEditable(survey)" tabindex="0">
+            <button class="btn btn-primary btn-xs" ng-click="redirectToSurveyCatalog(surveyCatalog.id, 'edit')" ng-show="isSurveyCatalogEditable(surveyCatalog)" tabindex="0">
               <i class="fa fa-pencil"></i>
             </button>
             <button class="btn btn-danger btn-xs"
@@ -81,10 +81,10 @@
         </tbody>
       </table>
     </div>
-    <alert ng-show="!loadingBarVisible && surveys.length == 0" type="info">
+    <alert ng-show="!loadingBarVisible && surveyCatalogs.length == 0" type="info">
       <span class="fa fa-flag"></span> Your search returned no results.
     </alert>
-    <p ng-if="surveys.length > 0" class="record-count small text-center">Showing {{surveyCatalogs.length}} records</p>
+    <p ng-if="surveyCatalogs.length > 0" class="record-count small text-center">Showing {{surveyCatalogs.length}} records</p>
     <p class="loading-more alert alert-info text-center"><i class="fa fa-spin fa-circle-o-notch"></i> Loading more...</p>
   </div>
 </div>
