TSVPORTAL-9753: survey catalog fixed create/edit endDate range

--- a/app/views/survey-catalog-create.html
+++ b/app/views/survey-catalog-create.html
@@ -39,13 +39,14 @@
 							<div class="form-group">
 								<date-picker-field
 									form="surveyCatalogDataForm"
+                  min-date="minDate"
 									name="EffectiveEndDate"
 									label="Effective End Date"
 									disable="readOnly || shouldDisableEndDate"
 									ng-model="surveyCatalog.endDate"
 									end-current-effective="!viewEditItem"
-									custom-effective="true"
-									custom-date="surveyCatalog.endDate"
+                  custom-effective="true"
+                  custom-date="surveyCatalog.endDate"
 									required="true">
 								</date-picker-field>
 							</div>
