TSVPORTAL-9751 | TSVPORTAL-10634 | Added mandatory * symbol.

--- a/app/views/survey-create.html
+++ b/app/views/survey-create.html
@@ -54,7 +54,7 @@
 					<div class="row">
 					   <div class="col-xs-12 col-sm-4">
 							<div class="form-group">
-								<label for="surveyType">Survey Type</label>
+								<label for="surveyType">Survey Type*</label>
 								<select required name="surveyType" id="surveyTypeId" class="form-control" ng-disabled="isDisabled()"
 										ng-options="surveyType.id as surveyType.surveyTypeName for surveyType in surveyTypes"
 										ng-model="survey.surveyTypeId">
